# sm64js

./: .dockerignore  .env.template  .gitignore  BuildStepsWithServerExtraction.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  DockerfileAssets  Mario.camera  README.md  assets.js  edit_content.diff  index.html  nginx.conf.sigil  package-lock.json  package.json  publish-rust-server.sh  publish.sh  puppet.js  rollup.config.js  rollup_build_fix.js  romTextureLoader.js  serveProduction.js  serveStatic.js  webpack.config.js
.github/workflows/: audit.yml  test-and-publish.yml
castle_courtyard/: script.js
castle_inside/: script_2.js  texture.inc.js
castle_inside/star_door/: collision.inc.js
door/: geo.inc.js
door/anims/: anim_03015440.inc.js  anim_03015458.inc.js  anim_03015690.inc.js  anim_030156A8.inc.js  table.inc.js
extractTools/: assets.json  extract_assets.py  hexdumpTextures.sh
otherTools/: Convert.rb  ConvertActor.rb  animDataCreate.js  c2js.rb  convertGeo.js  convertGeoDir.js  convertGeoSingleFile.js  convertOBJ.js  convertVertex.js  convertVertexAndDl.js  convertVertexAndDlDir.js  convertVertexAndDlSingleFile.js  patchTextures.js  profanity_filter.txt
proto/: mario.proto  mario_pb.js
rust-server/: Cargo.toml  Dockerfile  DockerfileBuild  build.rs
rust-server/src/: chat.rs  client.rs  data.rs  date_format.rs  main.rs  room.rs  server.rs  session.rs
rust-server/src/openapi/: index.html  rapidoc-min.js
src/: assets.js  chat.js  cmts_cosmetics.js  cosmetics.js  countdown-widget.css  credits-old.html  credits.html  index-unused.html  index.html  index.js  keydrown.min.js  module1.js  player_input_manager.js  romTextureLoader.js  socket.js  stylesheet.css  template.css  utils.js
src/audio/: data.js  external.js
src/common_gfx/: segment2.js
src/engine/: BehaviorCommands.js  GeoLayout.js  GeoRenderer.js  LevelCommands.js  SurfaceCollision.js  geo_layout.js  graph_node.js  (+2 more)
(+1688 files in other folders)
