[package]
name = "sm64js"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[build-dependencies]
prost-build = "0.6"

[dependencies]
anyhow = "1"
actix = "0.10"
actix-codec = "0.3"
actix_derive = "0.5"
actix-files = "0.5"
actix-web = "3"
actix-web-actors = "3"
censor = "0.2"
chrono = "0.4"
dashmap = "4"
env_logger = "0.8"
flate2 = "1"
# flate2 = { version = "1", features = ["zlib"], default-features = false }
indexmap = "1"
lazy_static = "1"
maplit = "1"
paperclip = { git = "https://github.com/Tarnadas/paperclip.git", commit = "57173df635435946eb0265f2706b34ab5492d0b7", features = ["actix-nightly", "actix-files", "chrono"] }
parking_lot = "0.11"
prost = "0.6"
rand = "0.7"
rayon = "1"
serde = "*"
v_htmlescape = "0.11"
